Fix: Remove libtinfo5 (not available on Ubuntu 24.04)

--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -38,8 +38,8 @@ jobs:
           zlib1g-dev \
           libncurses5-dev \
           libncursesw5-dev \
-          libtinfo5 \
-          cmake
+          cmake \
+          ccache
     
     - name: Install Python dependencies
       run: |
