--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -22,6 +22,7 @@ jobs:
     
     - name: Install system dependencies
       run: |
+        echo "Installing dependencies for Ubuntu..."
         sudo apt-get update
         sudo apt-get install -y \
           build-essential \
