--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -48,9 +48,38 @@ jobs:
         pip install --upgrade cython==0.29.33
         pip install --upgrade buildozer
     
-    - name: Build APK with Buildozer
+    - name: Setup Android SDK and accept licenses
       run: |
-        buildozer android debug
+        # Set environment variables for Android SDK
+        export ANDROID_SDK_ROOT=$HOME/.buildozer/android/platform/android-sdk
+        export ANDROID_HOME=$ANDROID_SDK_ROOT
+        
+        # Create necessary directories
+        mkdir -p $ANDROID_SDK_ROOT/licenses
+        mkdir -p $ANDROID_SDK_ROOT/cmdline-tools
+        
+        # Accept all SDK licenses by creating license files (multiple hashes for different versions)
+        echo "24333f8a63b6825ea9c5514f83c2829b004d1fee" > $ANDROID_SDK_ROOT/licenses/android-sdk-license
+        echo "d56f5187479451eabf01fb78af6dfcb131a6481e" >> $ANDROID_SDK_ROOT/licenses/android-sdk-license
+        echo "24333f8a63b6825ea9c5514f83c2829b004d1fee" >> $ANDROID_SDK_ROOT/licenses/android-sdk-license
+        echo "8933bad161af4178b1185d1a37fbf41ea5269c55" >> $ANDROID_SDK_ROOT/licenses/android-sdk-license
+        
+        echo "84831b9409646a918e30573bab4c9c91346d8abd" > $ANDROID_SDK_ROOT/licenses/android-sdk-preview-license
+        echo "504667f4c0de7af1a06de9f4b1727b84351f2910" >> $ANDROID_SDK_ROOT/licenses/android-sdk-preview-license
+        
+        echo "d975f751698a77b662f1254ddbeed3901e976f5a" > $ANDROID_SDK_ROOT/licenses/intel-android-extra-license
+        
+        echo "33b6a2b64607f11b759f320ef9dff4ae5c47d97a" > $ANDROID_SDK_ROOT/licenses/google-gdk-license
+        
+        echo "Android SDK licenses accepted"
+    
+    - name: Build APK with Buildozer
+      env:
+        ANDROID_SDK_ROOT: ${{ env.HOME }}/.buildozer/android/platform/android-sdk
+        ANDROID_HOME: ${{ env.HOME }}/.buildozer/android/platform/android-sdk
+      run: |
+        # Use 'yes' to auto-accept any prompts during build
+        yes | buildozer -v android debug || buildozer -v android debug
     
     - name: Upload APK artifact
       uses: actions/upload-artifact@v4
