Fix: Add sdkmanager wrapper and p4a configs to force API 31
- Remove deprecated android.sdk setting
- Add p4a.android_api and p4a.ndk_api settings
- Create sdkmanager wrapper that auto-accepts all licenses
- Add wrapper to PATH before buildozer runs
- This ensures ALL sdkmanager calls auto-accept licenses

--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -73,13 +73,29 @@ jobs:
         
         echo "Android SDK licenses accepted"
     
+    - name: Create sdkmanager wrapper to auto-accept licenses
+      run: |
+        # Create a wrapper script for sdkmanager that always pipes 'yes'
+        mkdir -p $HOME/.buildozer/bin
+        cat > $HOME/.buildozer/bin/sdkmanager << 'EOF'
+        #!/bin/bash
+        # Wrapper to auto-accept all SDK licenses
+        yes | /home/runner/.buildozer/android/platform/android-sdk/tools/bin/sdkmanager "$@"
+        EOF
+        chmod +x $HOME/.buildozer/bin/sdkmanager
+        echo "Created sdkmanager wrapper"
+    
     - name: Build APK with Buildozer
       env:
         ANDROID_SDK_ROOT: ${{ env.HOME }}/.buildozer/android/platform/android-sdk
         ANDROID_HOME: ${{ env.HOME }}/.buildozer/android/platform/android-sdk
+        PATH: ${{ env.HOME }}/.buildozer/bin:${{ env.PATH }}
+        USE_SDK_WRAPPER: 1
+        GRADLE_OPTS: "-Dorg.gradle.jvmargs=-Xmx2048m"
       run: |
         # Use 'yes' to auto-accept any prompts during build
-        yes | buildozer -v android debug || buildozer -v android debug
+        # The sdkmanager wrapper will handle license prompts automatically
+        yes 2>/dev/null | buildozer -v android debug || buildozer -v android debug
     
     - name: Upload APK artifact
       uses: actions/upload-artifact@v4
